PIVOT-950, the fix applied to all pages using deployJava.js

--- a/deploy/demos/bxml-explorer.html
+++ b/deploy/demos/bxml-explorer.html
@@ -33,7 +33,7 @@ limitations under the License.
                 pageTracker._trackPageview();
                 } catch(err) {
 				}
-				</script></head><body><script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+				</script></head><body><script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
