--- a/deploy/demos/decorators.html
+++ b/deploy/demos/decorators.html
@@ -30,7 +30,7 @@ limitations under the License.
             effects, etc. This example shows a window with a reflection decorator and a frame with
             a fade decorator.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
