--- a/deploy/demos/kitchen-sink.html
+++ b/deploy/demos/kitchen-sink.html
@@ -36,7 +36,7 @@ org.apache.pivot.wtk.skin.terra.location=org/apache/pivot/tutorials/TerraTheme_d
                 pageTracker._trackPageview();
                 } catch(err) {
 				}
-				</script></head><body><script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+				</script></head><body><script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
