--- a/deploy/demos/multiselect.html
+++ b/deploy/demos/multiselect.html
@@ -29,7 +29,7 @@ limitations under the License.
             ListView component. This is more efficient than maintaining a list of individual
             selected indexes.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
