--- a/deploy/demos/rss-feed.html
+++ b/deploy/demos/rss-feed.html
@@ -29,7 +29,7 @@ limitations under the License.
             custom list view item renderer to present the news data. Double-clicking an item in
             the list will open the article in a new window.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
