--- a/deploy/demos/stock-tracker.html
+++ b/deploy/demos/stock-tracker.html
@@ -29,7 +29,7 @@ limitations under the License.
             Yahoo! Finance as a CSV file and presents it in a table view component (the applet is
             signed to allow it to communicate with the Yahoo web service):
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
