--- a/deploy/demos/suggest.html
+++ b/deploy/demos/suggest.html
@@ -29,7 +29,7 @@ limitations under the License.
             provide text input auto-complete suggestions. This example queries the Yahoo! search
             API to get the list of suggestions.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
