--- a/deploy/tutorials/accordions.html
+++ b/deploy/tutorials/accordions.html
@@ -43,7 +43,7 @@ limitations under the License.
             info, payment info, and order summary:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
