--- a/deploy/tutorials/borders.html
+++ b/deploy/tutorials/borders.html
@@ -44,7 +44,7 @@ limitations under the License.
             on the left has no title and applies some custom style values:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
