--- a/deploy/tutorials/checkboxes.html
+++ b/deploy/tutorials/checkboxes.html
@@ -35,7 +35,7 @@ limitations under the License.
             application. Selecting a checkbox shows or hides an associated icon:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
