--- a/deploy/tutorials/clipboard.html
+++ b/deploy/tutorials/clipboard.html
@@ -43,7 +43,7 @@ limitations under the License.
             and paste with a local clipboard whose content is not shared with other applications.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
