--- a/deploy/tutorials/effects.html
+++ b/deploy/tutorials/effects.html
@@ -49,7 +49,7 @@ limitations under the License.
             selected decorator to an <tt>ImageView</tt> component:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
