--- a/deploy/tutorials/hello-world.html
+++ b/deploy/tutorials/hello-world.html
@@ -34,7 +34,7 @@ limitations under the License.
             Below is the output of the traditional "hello world" application written in Pivot:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
