--- a/deploy/tutorials/lists.html
+++ b/deploy/tutorials/lists.html
@@ -44,7 +44,7 @@ limitations under the License.
             and list selections are reflected in the label to the right.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
@@ -238,7 +238,7 @@ limitations under the License.
             Sample <tt>ListView</tt> containing <tt>ListItem</tt>s, and a renderer to display images for any item.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
