--- a/deploy/tutorials/localization.html
+++ b/deploy/tutorials/localization.html
@@ -45,7 +45,7 @@ limitations under the License.
             The following application provides a simple demonstration of localization in Pivot:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
@@ -236,7 +236,7 @@ limitations under the License.
             is signed to allow the code to set the "user.language" system property:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
