--- a/deploy/tutorials/panels.html
+++ b/deploy/tutorials/panels.html
@@ -47,7 +47,7 @@ limitations under the License.
             positioned such that they appear within the bounds of the rectangle:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
