--- a/deploy/tutorials/split-panes.html
+++ b/deploy/tutorials/split-panes.html
@@ -68,7 +68,7 @@ limitations under the License.
             styles supported by the Terra there's implementation of the split pane skin.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
