--- a/deploy/tutorials/stock-tracker.html
+++ b/deploy/tutorials/stock-tracker.html
@@ -51,7 +51,7 @@ limitations under the License.
             it to communicate with the Yahoo web service):
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
