--- a/deploy/tutorials/table-panes.html
+++ b/deploy/tutorials/table-panes.html
@@ -80,7 +80,7 @@ limitations under the License.
             responds to mouse clicks with information about where the user clicked:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
@@ -255,7 +255,7 @@ limitations under the License.
             the effect it has on the relative columns in the grid pane.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
