--- a/deploy/demos/dom-interaction.html
+++ b/deploy/demos/dom-interaction.html
@@ -44,7 +44,7 @@ limitations under the License.
         <table>
             <tr>
                 <td style="text-align:center;">
-                    <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+                    <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
