--- a/deploy/demos/fixed-column-table.html
+++ b/deploy/demos/fixed-column-table.html
@@ -28,7 +28,7 @@ limitations under the License.
             Demonstrates how to create a table with fixed columns in Pivot. Fixed columns are
             handy when displaying tables with many columns.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
