--- a/deploy/demos/itunes-search.html
+++ b/deploy/demos/itunes-search.html
@@ -28,7 +28,7 @@ limitations under the License.
             Simple application that allows a user to run search queries against the iTunes Music
             Store and presents the results in a table view.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
