--- a/deploy/demos/json-viewer.html
+++ b/deploy/demos/json-viewer.html
@@ -27,7 +27,7 @@ limitations under the License.
         <p>
             Allows users to visually browse a JSON structure using a TreeView component.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
