--- a/deploy/demos/large-data.html
+++ b/deploy/demos/large-data.html
@@ -38,7 +38,7 @@ limitations under the License.
             Note that the 10e3.csv, 10e4.csv, and 10e5.csv files are not included in this
             distribution due to their large size.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
