--- a/deploy/demos/table-row-editor.html
+++ b/deploy/demos/table-row-editor.html
@@ -28,7 +28,7 @@ limitations under the License.
             This sample application demonstrates the use of a slide transition to bring up a table
             view row editor.
         </p>
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
