--- a/deploy/tests/hello-world.html
+++ b/deploy/tests/hello-world.html
@@ -96,6 +96,7 @@ limitations under the License.
 
 
 			parameters.java_arguments = javaArguments.join(" ");
+			parameters.permissions    = "sandbox";
 
 
             deployJava.runApplet(attributes, parameters, "1.6");
