--- a/deploy/tutorials/activity-indicators.html
+++ b/deploy/tutorials/activity-indicators.html
@@ -44,7 +44,7 @@ limitations under the License.
             <tt>ActivityIndicator</tt> component, shown below:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
