--- a/deploy/tutorials/box-panes.html
+++ b/deploy/tutorials/box-panes.html
@@ -68,7 +68,7 @@ limitations under the License.
             the box pane's components:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
