--- a/deploy/tutorials/calendars.html
+++ b/deploy/tutorials/calendars.html
@@ -43,7 +43,7 @@ limitations under the License.
             of a label to the currently selected date:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
