--- a/deploy/tutorials/card-panes.html
+++ b/deploy/tutorials/card-panes.html
@@ -73,7 +73,7 @@ limitations under the License.
             The following application demonstrates the behavior of <tt>CardPane</tt>:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
