--- a/deploy/tutorials/context-menus.html
+++ b/deploy/tutorials/context-menus.html
@@ -54,7 +54,7 @@ limitations under the License.
             menu that describes what the user clicked on:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
