--- a/deploy/tutorials/drag-and-drop.html
+++ b/deploy/tutorials/drag-and-drop.html
@@ -47,7 +47,7 @@ limitations under the License.
         <table>
             <tr>
                 <td rowspan="2">
-                    <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+                    <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
