--- a/deploy/tutorials/effects.transitions.html
+++ b/deploy/tutorials/effects.transitions.html
@@ -43,7 +43,7 @@ limitations under the License.
             button to shrink and fade as it is removed from its parent container:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
