--- a/deploy/tutorials/file-browsing.html
+++ b/deploy/tutorials/file-browsing.html
@@ -35,7 +35,7 @@ limitations under the License.
             The following example demonstrates the use of the <tt>FileBrowserSheet</tt> class:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
