--- a/deploy/tutorials/fill-panes.html
+++ b/deploy/tutorials/fill-panes.html
@@ -53,7 +53,7 @@ limitations under the License.
             </li>
         </ul>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
