--- a/deploy/tutorials/flow-panes.html
+++ b/deploy/tutorials/flow-panes.html
@@ -45,7 +45,7 @@ limitations under the License.
             have a baseline, it draws a blue line across the component's vertical midpoint:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
