--- a/deploy/tutorials/forms.html
+++ b/deploy/tutorials/forms.html
@@ -49,7 +49,7 @@ limitations under the License.
             uses the <tt>Form.Section</tt> heading as the <tt>Separator</tt> heading:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
