--- a/deploy/tutorials/labels-and-image-views.html
+++ b/deploy/tutorials/labels-and-image-views.html
@@ -37,7 +37,7 @@ limitations under the License.
             applet below shows an <tt>ImageView</tt> followed by a <tt>Label</tt>:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
