--- a/deploy/tutorials/menu-buttons.html
+++ b/deploy/tutorials/menu-buttons.html
@@ -42,7 +42,7 @@ limitations under the License.
             content area on the right:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
