--- a/deploy/tutorials/property-binding.html
+++ b/deploy/tutorials/property-binding.html
@@ -36,7 +36,7 @@ limitations under the License.
             that changes to the source are automatically reflected in the target.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
