--- a/deploy/tutorials/query-servlet.html
+++ b/deploy/tutorials/query-servlet.html
@@ -48,7 +48,7 @@ limitations under the License.
             work in the online tutorial.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
