--- a/deploy/tutorials/rollups.html
+++ b/deploy/tutorials/rollups.html
@@ -44,7 +44,7 @@ limitations under the License.
             Expanders example. The fourth includes an example of nested rollups:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
