--- a/deploy/tutorials/sample-application.html
+++ b/deploy/tutorials/sample-application.html
@@ -35,7 +35,7 @@ limitations under the License.
             Pivot components:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
