--- a/deploy/tutorials/separators.html
+++ b/deploy/tutorials/separators.html
@@ -36,7 +36,7 @@ limitations under the License.
             sample application below:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
