--- a/deploy/tutorials/sliders.html
+++ b/deploy/tutorials/sliders.html
@@ -37,7 +37,7 @@ limitations under the License.
             <tt>Label</tt> component:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
