--- a/deploy/tutorials/spinners.html
+++ b/deploy/tutorials/spinners.html
@@ -46,7 +46,7 @@ limitations under the License.
             second is not:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
