--- a/deploy/tutorials/stock-tracker.localization.html
+++ b/deploy/tutorials/stock-tracker.localization.html
@@ -135,7 +135,7 @@ limitations under the License.
             execute both the English and French versions:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
