--- a/deploy/tutorials/table-views.html
+++ b/deploy/tutorials/table-views.html
@@ -51,7 +51,7 @@ limitations under the License.
             final standings of the top ten medal-winning countries in the 2008 Summer Olympics:
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
