--- a/deploy/tutorials/tree-views.html
+++ b/deploy/tutorials/tree-views.html
@@ -45,7 +45,7 @@ limitations under the License.
             the raw data straight to the user.
         </p>
 
-        <script type="text/javascript" src="http://java.com/js/deployJava.js"></script><script type="text/javascript">
+        <script type="text/javascript" src="https://java.com/js/deployJava.js"></script><script type="text/javascript">
             
             var attributes = {
                 code:"org.apache.pivot.wtk.BrowserApplicationContext$HostApplet",
