--- a/deploy/who-we-are.html
+++ b/deploy/who-we-are.html
@@ -69,6 +69,11 @@ limitations under the License.
                     <em>(rwhitcomb at apache.org)</em>
                     <!--Your bio goes here-->
                 </li>
+                <li>
+                    <strong>Gavin McDonald</strong>
+                    <em>(gmcdonald at apache.org)</em>
+                    <!--Your bio goes here-->
+                </li>
             </ul>
         </div>
 
